--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+# Python virtual environment
+stemenv/
 # dependencies
 /node_modules
 /.pnp
